// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/TextArea DisabledTextArea smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 50%;
  cursor: not-allowed;
  height: auto;
  min-width: 8.75rem;
  background-color: #ffffff;
  width: auto;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem transparent;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 1rem 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-6+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 50%;
  color: #686BB3;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-5"
                >
                  <textarea
                    aria-multiline="true"
                    class="emotion-6"
                    cols="10"
                    disabled=""
                    placeholder="Label"
                    role="textbox"
                    rows="5"
                  />
                  <label
                    class="emotion-7"
                  >
                    Label 
                  </label>
                </div>
              </div>
            </div>
            <div
              class="emotion-8"
              data-testid="error"
            >
              <span>
                This field is disabled
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/TextArea Playground smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: auto;
  min-width: 8.75rem;
  background-color: #ffffff;
  width: auto;
}

.emotion-3:hover {
  background-color: #F5F5FF;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 1rem 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: both;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: #686BB3;
}

.emotion-6:focus::-moz-placeholder {
  color: #686BB3;
}

.emotion-6:focus:-ms-input-placeholder {
  color: #686BB3;
}

.emotion-6:focus::placeholder {
  color: #686BB3;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-6+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 1;
  color: #686BB3;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-5"
                >
                  <textarea
                    aria-multiline="true"
                    class="emotion-6"
                    cols="10"
                    placeholder="Placeholder "
                    role="textbox"
                    rows="5"
                  />
                  <label
                    class="emotion-7"
                  >
                    Label 
                  </label>
                </div>
              </div>
            </div>
            <div
              class="emotion-8"
              data-testid="error"
            >
              <span>
                Hint in Text Area
              </span>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/TextArea ResizableTextArea smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: auto;
  min-width: 8.75rem;
  background-color: #ffffff;
  width: auto;
}

.emotion-3:hover {
  background-color: #F5F5FF;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 1rem 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: both;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-6+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-5"
                >
                  <textarea
                    aria-multiline="true"
                    class="emotion-6"
                    cols="10"
                    placeholder="Label"
                    role="textbox"
                    rows="5"
                  />
                  <label
                    class="emotion-7"
                  >
                    Label 
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/TextArea TextAreaStatuses smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: auto;
  min-width: 8.75rem;
  background-color: #ffffff;
  width: auto;
}

.emotion-4:hover {
  background-color: #F5F5FF;
}

.emotion-4:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 1rem 0.75rem;
}

.emotion-5>div {
  position: relative;
}

.emotion-6 {
  width: 100%;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: none;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7:focus::-moz-placeholder {
  color: transparent;
}

.emotion-7:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-7:focus::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus-within+label,
.emotion-7:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-7:focus-within+label {
  color: #1552DD;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-7+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 1;
  color: #686BB3;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-9 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.125rem #F882AC;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: auto;
  min-width: 8.75rem;
  background-color: #FFE7F0;
  width: auto;
}

.emotion-10:hover {
  background-color: #FFB8D1;
}

.emotion-10:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-14 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #FF176B;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 1;
  color: #CB205D;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-15 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

.emotion-16 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-17 {
  fill: #CB205D;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-17 path {
  fill: #CB205D;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: auto;
  min-width: 8.75rem;
  background-color: #F5F5FF;
  width: auto;
}

.emotion-18:hover {
  background-color: #F5F5FF;
}

.emotion-18:focus-within {
  box-shadow: 0 0 0 0.125rem #b9cdfc;
  background-color: #F5F5FF;
}

.emotion-21 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: none;
}

.emotion-21::-webkit-input-placeholder {
  color: transparent;
}

.emotion-21::-moz-placeholder {
  color: transparent;
}

.emotion-21:-ms-input-placeholder {
  color: transparent;
}

.emotion-21::placeholder {
  color: transparent;
}

.emotion-21:focus {
  outline: none;
}

.emotion-21:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-21:focus::-moz-placeholder {
  color: transparent;
}

.emotion-21:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-21:focus::placeholder {
  color: transparent;
}

.emotion-21:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-21:focus-within+label,
.emotion-21:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-21:focus-within+label {
  color: #1552DD;
}

.emotion-21:disabled {
  cursor: text;
}

.emotion-21+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-2"
            >
              <div
                style="margin: 5px;"
              >
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-5"
                  >
                    <div
                      class="emotion-6"
                    >
                      <textarea
                        aria-multiline="true"
                        class="emotion-7"
                        cols="10"
                        placeholder="Normal"
                        role="textbox"
                        rows="5"
                      />
                      <label
                        class="emotion-8"
                      >
                        Normal 
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-9"
                  data-testid="error"
                >
                  <span>
                    Hint in Text Area
                  </span>
                </div>
              </div>
              <div
                style="margin: 5px;"
              >
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-5"
                  >
                    <div
                      class="emotion-6"
                    >
                      <textarea
                        aria-multiline="true"
                        class="emotion-7"
                        cols="10"
                        placeholder="Error"
                        role="textbox"
                        rows="5"
                      />
                      <label
                        class="emotion-14"
                      >
                        Error 
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-15"
                  data-testid="error"
                >
                  <span
                    class="emotion-16"
                  >
                    <svg
                      class="emotion-17"
                      fill="none"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        id="warning"
                      >
                        <path
                          d="M9.9966 13.9851C10.2284 13.9851 10.4238 13.9067 10.5829 13.7499C10.742 13.5931 10.8215 13.3988 10.8215 13.167C10.8215 12.9352 10.7431 12.7397 10.5863 12.5807C10.4295 12.4216 10.2352 12.3421 10.0034 12.3421C9.7716 12.3421 9.57617 12.4205 9.4171 12.5773C9.25804 12.7341 9.1785 12.9283 9.1785 13.1601C9.1785 13.3919 9.2569 13.5874 9.41371 13.7465C9.57051 13.9055 9.76481 13.9851 9.9966 13.9851ZM10.0197 10.7976C10.2495 10.7976 10.4461 10.7159 10.6094 10.5525C10.7727 10.389 10.8544 10.1925 10.8544 9.96268V6.85584C10.8544 6.62608 10.7726 6.42948 10.6091 6.26605C10.4457 6.10262 10.249 6.0209 10.0192 6.0209C9.78931 6.0209 9.59274 6.10262 9.42944 6.26605C9.26613 6.42948 9.18448 6.62608 9.18448 6.85584V9.96268C9.18448 10.1925 9.26622 10.389 9.42969 10.5525C9.59317 10.7159 9.78983 10.7976 10.0197 10.7976ZM10.0013 18C8.89481 18 7.85478 17.79 6.88122 17.3701C5.90763 16.9502 5.06076 16.3803 4.34059 15.6604C3.62041 14.9405 3.05026 14.094 2.63016 13.1208C2.21005 12.1476 2 11.1078 2 10.0013C2 8.8915 2.21035 7.84835 2.63105 6.87186C3.05175 5.89538 3.62269 5.04596 4.34387 4.32362C5.06506 3.60129 5.91159 3.03343 6.88345 2.62006C7.8553 2.20669 8.89371 2 9.9987 2C11.1084 2 12.1514 2.2066 13.1278 2.61981C14.1042 3.03301 14.9536 3.60072 15.6761 4.32292C16.3986 5.04513 16.9666 5.8944 17.3799 6.87073C17.7933 7.84706 18 8.89025 18 10.0003C18 11.1104 17.7934 12.15 17.3802 13.1192C16.967 14.0884 16.3994 14.9337 15.6773 15.6552C14.9553 16.3766 14.1062 16.9478 13.1301 17.3687C12.1541 17.7896 11.1111 18 10.0013 18Z"
                          fill="#54587F"
                          id="Vector"
                        />
                      </g>
                    </svg>
                  </span>
                  <span>
                    Error in Text Area
                  </span>
                </div>
              </div>
              <div
                style="margin: 5px;"
              >
                <div
                  class="emotion-18"
                >
                  <div
                    class="emotion-5"
                  >
                    <div
                      class="emotion-6"
                    >
                      <textarea
                        aria-multiline="true"
                        class="emotion-21"
                        cols="10"
                        disabled=""
                        placeholder="Read-only"
                        readonly=""
                        role="textbox"
                        rows="5"
                      />
                      <label
                        class="emotion-8"
                      >
                        Read-only 
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-9"
                  data-testid="error"
                >
                  <span>
                    Hint in Text Area
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/TextArea TextAreaWithCounter smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: auto;
  min-width: 8.75rem;
  background-color: #ffffff;
  width: auto;
}

.emotion-3:hover {
  background-color: #F5F5FF;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 1rem 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-6+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 0.5rem 0 0;
  color: #686BB3;
  opacity: 1;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-5"
                >
                  <textarea
                    aria-multiline="true"
                    class="emotion-6"
                    cols="10"
                    maxlength="10"
                    placeholder="Label"
                    role="textbox"
                    rows="5"
                  />
                  <label
                    class="emotion-7"
                  >
                    Label 
                  </label>
                </div>
              </div>
            </div>
            <div
              class="emotion-8"
            >
              0/10
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/TextArea TextAreaWithLabels smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: auto;
  min-width: 8.75rem;
  background-color: #ffffff;
  width: auto;
}

.emotion-3:hover {
  background-color: #F5F5FF;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 1rem 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: none;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-6:focus-within+label {
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-6+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 15rem;
  min-width: 15rem;
  resize: none;
}

.emotion-11::-webkit-input-placeholder {
  color: transparent;
}

.emotion-11::-moz-placeholder {
  color: transparent;
}

.emotion-11:-ms-input-placeholder {
  color: transparent;
}

.emotion-11::placeholder {
  color: transparent;
}

.emotion-11:focus {
  outline: none;
}

.emotion-11:focus::-webkit-input-placeholder {
  color: #686BB3;
}

.emotion-11:focus::-moz-placeholder {
  color: #686BB3;
}

.emotion-11:focus:-ms-input-placeholder {
  color: #686BB3;
}

.emotion-11:focus::placeholder {
  color: #686BB3;
}

.emotion-11:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-11:focus-within+label,
.emotion-11:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -4px) scale(0.8);
  -moz-transform: translate(0.1875rem, -4px) scale(0.8);
  -ms-transform: translate(0.1875rem, -4px) scale(0.8);
  transform: translate(0.1875rem, -4px) scale(0.8);
  font-weight: 700;
}

.emotion-11:focus-within+label {
  color: #1552DD;
}

.emotion-11:disabled {
  cursor: not-allowed;
}

.emotion-11+label {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-5"
                >
                  <textarea
                    aria-multiline="true"
                    class="emotion-6"
                    cols="10"
                    placeholder="Label"
                    role="textbox"
                    rows="5"
                  />
                  <label
                    class="emotion-7"
                  >
                    Label 
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-5"
                >
                  <textarea
                    aria-multiline="true"
                    class="emotion-11"
                    cols="10"
                    placeholder="Placeholder "
                    role="textbox"
                    rows="5"
                  />
                  <label
                    class="emotion-7"
                  >
                    Label 
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;
